crates/context-macro/tests/constraints/missing_system_program.fail.stderr
error: One constraint requires including the `Program<System>` account.
  --> tests/constraints/missing_system_program.fail.rs:21:1
   |
21 | pub struct InitContext {
   | ^^^
